<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context=".view.BeneficiadoActivity">

    <TextView
        android:id="@+id/txtBeneficiado"
        style="@style/titulo"
        android:text="@string/tituloBn"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/textview"
        android:text="@string/nome">
    </TextView>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="8dp"
        android:hint="@string/nome"
        android:id="@+id/editNome">
    </EditText>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/textview"
        android:text="@string/email">
    </TextView>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="8dp"
        android:hint="@string/email"
        android:id="@+id/editEmail">
    </EditText>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/textview"
        android:text="@string/telefone">
    </TextView>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="8dp"
        android:hint="@string/telefone"
        android:id="@+id/editTelefone">
    </EditText>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/textview"
        android:text="@string/celular">
    </TextView>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="8dp"
        android:hint="@string/celular"
        android:id="@+id/editCelular">
    </EditText>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/textview"
        android:text="@string/cpf">
    </TextView>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="8dp"
        android:hint="@string/cpf"
        android:id="@+id/editCpf">
    </EditText>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/textview"
        android:text="@string/site">
    </TextView>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="8dp"
        android:hint="@string/site"
        android:id="@+id/editSite">
    </EditText>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            style="@style/btn_dark"
            android:onClick="enviar"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/salvar" />

        <Button
            style="@style/btn_dark"
            android:onClick="voltar"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/voltar" />
    </LinearLayout>



</LinearLayout>