<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context=".view.ParceiroActivity">

    <TextView
        android:id="@+id/txtParceiro"
        style="@style/titulo"
        android:text="@string/titulo"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/textview"
        android:text="@string/nome">
    </TextView>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="8dp"
        android:hint="Nome"
        android:id="@+id/editNome">
    </EditText>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/textview"
        android:text="@string/email">
    </TextView>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="8dp"
        android:hint="E-mail"
        android:id="@+id/editEmail">
    </EditText>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/textview"
        android:text="@string/telefone">
    </TextView>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="8dp"
        android:hint="Telefone"
        android:id="@+id/editTelefone">
    </EditText>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/textview"
        android:text="@string/celular">
    </TextView>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="8dp"
        android:hint="Celular"
        android:id="@+id/editCelular">
    </EditText>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/textview"
        android:text="@string/cpf">
    </TextView>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="8dp"
        android:hint="CPF"
        android:id="@+id/editCpf">
    </EditText>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/textview"
        android:text="@string/site">
    </TextView>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="8dp"
        android:hint="Site"
        android:id="@+id/editSite">
    </EditText>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/textview"
        android:text="@string/observacoes">
    </TextView>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="8dp"
        android:hint="Observações"
        android:id="@+id/editObservacoes">
    </EditText>

    <Button
        style="@style/btn_dark"
        android:onClick="enviar"
        android:text="enviar" />

    <Button
        style="@style/btn_dark"
        android:onClick="fechar"
        android:text="fechar" />

</LinearLayout>